--- a/crn488v24/lma/thanos/Deployment_thanos-query.yaml
+++ b/crn488v24/lma/thanos/Deployment_thanos-query.yaml
@@ -62,6 +62,7 @@ spec:
             - --http-address=0.0.0.0:10902
             - --query.replica-label=replica
             - --store=prometheus-operated.lma.svc.cluster.local:10901
+            - --store=ae8a69d7ee20b4b3e9d1efefc1d1ae1a-561058332.ap-northeast-2.elb.amazonaws.com:10901
           ports:
             - name: http
               containerPort: 10902
